--- a/flask_app/templates/display_recipe.html
+++ b/flask_app/templates/display_recipe.html
@@ -34,6 +34,9 @@
       <a class="nav-link disabled" href="#">Planning</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" href="/ingredients">Ingredients</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link disabled">Settings</a>
     </li>
   </ul>
