--- a/flask_app/templates/edit_recipe.html
+++ b/flask_app/templates/edit_recipe.html
@@ -38,6 +38,9 @@
       <a class="nav-link disabled" href="#">Planning</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" href="/ingredients">Ingredients</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link disabled">Settings</a>
     </li>
   </ul>
@@ -158,9 +161,10 @@
                       <option value="7">Dessert</option>
                     </select>
                   </div>
-                  <div class="mb-3">
-                    <label for="servings" class="form-label">Servings:</label>
+                  <label for="servings" class="form-label">Servings:</label>
+                  <div class="input-group mb-3">
                     <input type="number" name="servings" value="{{recipe.servings}}" class="form-control">
+                    <span class="input-group-text" id="basic-addon">portions</span>
                   </div>
 
 
@@ -177,9 +181,10 @@
                       <option value="3">Dinner</option>
                     </select>
                   </div>
-                  <div class="mb-3">
-                    <label for="cook_time" class="form-label">Cook time:</label>
+                  <label for="cook_time" class="form-label">Cook time:</label>
+                  <div class="input-group mb-3">
                     <input type="number" name="cook_time" value="{{recipe.cook_time}}" class="form-control">
+                    <span class="input-group-text" id="basic-addon">minutes</span>
                   </div>
                 </div>
                 <div class="col-12">
