--- a/flask_app/templates/ingredients.html
+++ b/flask_app/templates/ingredients.html
@@ -23,7 +23,7 @@
   </nav>
   <ul class="nav nav-underline justify-content-around">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="/">Home</a>
+      <a class="nav-link" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Shopping</a>
@@ -35,7 +35,7 @@
       <a class="nav-link disabled" href="#">Planning</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/ingredients">Ingredients</a>
+      <a class="nav-link active" href="/ingredients">Ingredients</a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled">Settings</a>
@@ -52,16 +52,15 @@
             <a class="nav-link active" aria-current="page" href="#">All</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Favorites</a>
+            <a class="nav-link" aria-current="page" href="#">Protein</a>
           </li>
           <li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Courses
+              Vegtables
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Action</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
-
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -78,52 +77,62 @@
 
 
       <div class="col-10 p-4 pt-0 mt-3 view-height overflow-auto">
+        <div class="card p-3">
+          <div class="row">
+            <div class="col-5">
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col">Ingredient</th>
+                    <th class="text-center" scope="col">Delete</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for ingredient in ingredients %}
+                  <tr>
+                    <td class="w-100">{{ingredient.name}}</td>
+                    <td class="text-center">
+                      <a href="/ingredient/{{ingredient.id}}/delete" class="btn btn-danger btn-sm">
+                        <i class="fa-solid fa-trash"></i>
+                      </a>
+                    </td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
 
-        <div class="d-flex  justify-content-end">
-          <a class="btn btn-primary mb-2" href="/recipe/new">
-            <i class="fa-solid fa-plus"></i> Add New
-          </a>
-        </div>
 
-
-        {% for recipe in recipes %}
-        <div class="card recipe-card mb-3 overflow-auto">
-          <div class=" row g-0">
-            <div class="col-2 p-3">
-              <img src="../static/img/fork_and_knife.png" class="img-fluid rounded-start img" alt="...">
             </div>
-            <div class="col-9 ">
-              <div class="card-body">
-                <h5 class="card-title">{{recipe.title}}</h5>
-                <h6 class="card-subtitle">{{recipe.category}}</h6>
-                <p class="card-text">{{recipe.description}}</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated at: {{recipe.updated_at}}</small>
-                </p>
-              </div>
-            </div>
-            <div class="col-1 d-flex flex-column justify-content-center align-items-center gap-2">
+            <div class="col-2"></div>
 
-
-              <a href="/recipe/show/{{recipe.id}}" class="btn btn-primary"><i class="fa-solid fa-eye"></i></a>
-              <a href="/recipe/edit/{{recipe.id}}" class="btn btn-warning"><i class="fa-solid fa-pen-to-square"
-                  style="color: white;"></i></a>
-              <a href="/recipe/{{recipe.id}}/delete" class="btn btn-danger"><i class="fa-solid fa-trash"></i></a>
-
+            <div class="col-4">
+              <form action="/ingredient/create" method="post">
+                <label for="name" class="form-label">Name:</label>
+                <input type="text" name="name" class="form-control mb-3">
+                <button class="btn btn-primary mb-2">
+                  <i class="fa-solid fa-plus"></i> Create New Ingredient
+                </button>
+              </form>
             </div>
           </div>
+
         </div>
-        {% endfor %}
+
+
+
 
 
       </div>
-
-
-
-
-
     </div>
 
+
+
+
+
+
   </div>
+  </div>
+
   <script src="https://kit.fontawesome.com/e71eff5305.js" crossorigin="anonymous">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
