--- a/flask_app/templates/new_recipe.html
+++ b/flask_app/templates/new_recipe.html
@@ -37,6 +37,9 @@
       <a class="nav-link disabled" href="#">Planning</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" href="/ingredients">Ingredients</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link disabled">Settings</a>
     </li>
   </ul>
@@ -150,9 +153,10 @@
                       <option value="7">Dessert</option>
                     </select>
                   </div>
-                  <div class="mb-3">
-                    <label for="servings" class="form-label">Servings:</label>
+                  <label for="servings" class="form-label">Servings:</label>
+                  <div class="input-group mb-3">
                     <input type="number" name="servings" class="form-control">
+                    <span class="input-group-text" id="basic-addon">portions</span>
                   </div>
 
 
@@ -169,16 +173,20 @@
                       <option value="3">Dinner</option>
                     </select>
                   </div>
-                  <div class="mb-3">
-                    <label for="cook_time" class="form-label">Cook time:</label>
+                  <label for="cook_time" class="form-label">Cook time:</label>
+                  <div class="input-group mb-3">
                     <input type="number" name="cook_time" class="form-control">
+                    <span class="input-group-text" id="basic-addon">minutes</span>
                   </div>
                 </div>
                 <div class="col-12">
-                  <div class="mb-3">
-                    <label for="formFile" class="form-label">Upload photo:</label>
+
+                  <label for="formFile" class="form-label">Upload photo:</label>
+                  <div class="input-group mb-3">
                     <input name="image" class="form-control" type="file" id="formFile">
+                    <button type="button" class="btn btn-outline-primary">Upload</button>
                   </div>
+
                   <div class="form-check mb-3">
                     <input name="is_favorite" class="form-check-input" type="checkbox" value="1" id="flexCheckDefault">
                     <label class="form-check-label" for="flexCheckDefault">
